#6776 - remove DIM color

--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -137,7 +137,7 @@
 .sv-ranking-item--preview {
   .sv-ranking-item__index {
     background-color: transparent;
-    border: 1px solid $foreground-dim;
+    border: 1px solid $foreground;
     box-sizing: border-box;
   }
 }
