--- a/src/defaultV2-theme/blocks/sd-checkbox.scss
+++ b/src/defaultV2-theme/blocks/sd-checkbox.scss
@@ -27,9 +27,9 @@
 
 
 .sd-checkbox--checked.sd-checkbox--readonly .sd-checkbox__svg use {
-  fill: $foreground-dim;
+  fill: $foreground;
 }
 
 .sd-checkbox--checked.sd-checkbox--preview .sd-checkbox__svg use{
-  fill: $foreground-dim;
+  fill: $foreground;
 }
