--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -38,7 +38,7 @@
         left: 0;
         top: 0;
         border: 0;
-      
+      }
       .sd-rating__max-text {
         position: absolute;
         margin: 0;
@@ -56,10 +56,10 @@
       .sd-rating__min-text {
         position: absolute;
         margin: 0;
-        left: 0;
+        left:0;
         bottom: 0;
         border: 0;
-      
+      }
       .sd-rating__max-text {
         position: absolute;
         margin: 0;
@@ -80,7 +80,7 @@
         left: 0;
         top: 0;
         border: 0;
-      
+      }
       .sd-rating__max-text {
         position: absolute;
         margin: 0;
