--- a/src/defaultV2-theme/blocks/sd-panel.scss
+++ b/src/defaultV2-theme/blocks/sd-panel.scss
@@ -70,7 +70,11 @@
   border-top: 1px solid $border-light;
   padding-top: calc(0.5 * var(--sd-base-vertical-padding));
 }
-
+.sd-panel--as-page .sd-panel__footer {
+  padding: calcSize(4) 0 0;
+  margin: 0;
+  border: none;
+}
 .sd-panel__content {
   padding-top: var(--sd-base-padding);
 }
