Fix padding-left is not properly animated for element's wrapper

--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -159,7 +159,7 @@
     flex-basis: var(--animation-width);
     width: var(--animation-width);
     min-width: var(--animation-width);
-    padding-left: calcSize(2);
+    padding-left: var(--animation-padding-left);
     overflow: visible;
   }
 }
