--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -24,19 +24,19 @@
 
 .sd-page__title,
 .sd-page__description {
-  &~.sd-row.sd-page__row:not(.sd-row--compact) {
+  & ~ .sd-row.sd-page__row:not(.sd-row--compact) {
     margin-top: calcSize(3);
     --animate-margin: #{calcSize(3)};
   }
 
-  &~.sd-page__row.sd-row--compact {
+  & ~ .sd-page__row.sd-row--compact {
     margin-top: var(--sd-base-vertical-padding);
     --animate-margin: var(--sd-base-vertical-padding);
   }
 }
 
 .sd-row.sd-page__row:not(.sd-row--compact) {
-  &~.sd-row.sd-page__row:not(.sd-row--compact) {
+  & ~ .sd-row.sd-page__row:not(.sd-row--compact) {
     margin-top: calcSize(2);
     --animate-margin: #{calcSize(2)};
   }
@@ -48,8 +48,9 @@
   width: calc(100% + var(--sd-base-padding));
   flex-wrap: wrap;
 
-  &>div {
+  & > div {
     box-sizing: border-box;
+    --animation-padding-left: calcSize(2);
     padding-left: calcSize(2);
     display: flex;
     align-items: stretch;
@@ -60,14 +61,16 @@
   .sd-row--multiple {
     row-gap: var(--sd-base-vertical-padding);
 
-    &>div {
+    & > div {
+      --animation-padding-left: var(--sd-base-padding);
       padding-left: var(--sd-base-padding);
     }
   }
 }
 
 .sd-row--multiple.sd-row--compact {
-  &>div {
+  & > div {
+    --animation-padding-left: var(--sd-base-padding);
     padding-left: var(--sd-base-padding);
   }
 }
