#8026 - fix preview footer width

--- a/src/defaultV2-theme/blocks/sd-panel.scss
+++ b/src/defaultV2-theme/blocks/sd-panel.scss
@@ -74,6 +74,7 @@
   padding: calcSize(4) 0 0;
   margin: 0;
   border: none;
+  width: initial;
 }
 .sd-panel__content {
   padding-top: var(--sd-base-padding);
