Feature/element animation (#8021)
* Work for #7502: implement fadeIn/fadeOut animation for popup

* Disable animtions in f tests

* Disable animations in popup survey test

* Fix popup modal

* Fix modal animation is not running on entering

* Fix markup tests

* Fix focus safekeeping

* Small refactor

* Replace enable/disable animations function with flag in settings

* Run finish callback if element is not animated

* Use setting in tests

* Add moveUp/moveDown animation for modal popup

* Extend animation class

* Correct animation duration

* work for the https://github.com/surveyjs/survey-library/issues/7547 (spike1)

* work for the https://github.com/surveyjs/survey-library/issues/7547 (spike2)

* work for the https://github.com/surveyjs/survey-library/issues/7547 (spike2-2)

* work for the https://github.com/surveyjs/survey-library/issues/7547 (spike 2-3)

* work for the https://github.com/surveyjs/survey-library/issues/7547 (spike 3)

* work for the https://github.com/surveyjs/survey-library/issues/7547

* work for the https://github.com/surveyjs/survey-library/issues/7547

* Fix dropdown styles

* Remove popup direction classes from markup tests

* work for the https://github.com/surveyjs/survey-library/issues/7547

* work for the https://github.com/surveyjs/survey-library/issues/7547 (lint)

* work for the https://github.com/surveyjs/survey-library/issues/7547

* work for the https://github.com/surveyjs/survey-library/issues/7547 (lint)

* Update etalons

* Add mask on vr test

* work for the https://github.com/surveyjs/survey-library/issues/7547

* Start working on element's animation

* work for the https://github.com/surveyjs/survey-library/issues/7547

* work for the https://github.com/surveyjs/survey-library/issues/7547

* Fix

* Fix

* Fix unit tests

* Refactor

* Refactor existing animations

* Take animation css classes from theme

* refactor onAnimationEnd callback



--- a/src/defaultV2-theme/blocks/sd-panel.scss
+++ b/src/defaultV2-theme/blocks/sd-panel.scss
@@ -3,7 +3,7 @@
 }
 
 .sd-panel.sd-panel--as-page {
-  &>.sd-panel__header.sd-panel__header {
+  & > .sd-panel__header.sd-panel__header {
     padding-top: 0;
     padding-bottom: calc(0.5 * var(--sd-base-vertical-padding) + #{$base-unit});
 
@@ -32,25 +32,25 @@
     }
   }
 
-  &>.sd-panel__errbox {
+  & > .sd-panel__errbox {
     margin: 0 0 calcSize(2) 0;
     padding: calc(0.5 * var(--sd-base-vertical-padding) + #{$base-unit}) var(--sd-base-padding);
   }
 
-  &>.sd-panel__content {
+  & > .sd-panel__content {
     padding-top: 0;
   }
 }
 
 .sd-root--compact {
   .sd-panel--as-page {
-    &>.sd-panel__errbox {
+    & > .sd-panel__errbox {
       margin: 0 0 var(--sd-base-vertical-padding) 0;
     }
   }
 }
 
-.sd-row~.sd-row {
+.sd-row ~ .sd-row {
   .sd-panel--as-page {
     padding-top: calcSize(4);
   }
@@ -81,7 +81,11 @@
 }
 
 .sd-panel.sd-element--nested {
-  &>.sd-panel__content {
+  & > .sd-panel__content {
     padding-bottom: var(--sd-base-padding);
   }
+}
+
+.sd-panel__content {
+  --animation-padding-top: var(--sd-base-padding);
 }
