--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -3,35 +3,42 @@
   flex-direction: row;
   width: 100%;
   box-sizing: border-box;
+  --animate-margin: var(--sd-base-vertical-padding);
   margin-top: var(--sd-base-vertical-padding);
 }
 
 .sd-row.sd-page__row {
   margin-top: calcSize(2);
+  --animate-margin: #{calcSize(2)};
 }
 
 .sd-page__row.sd-row--compact {
   margin-top: var(--sd-base-vertical-padding);
+  --animate-margin: var(--sd-base-vertical-padding);
 }
 
 .sd-row:first-of-type {
   margin-top: 0;
+  --animate-margin: 0;
 }
 
 .sd-page__title,
 .sd-page__description {
   & ~ .sd-row.sd-page__row:not(.sd-row--compact) {
     margin-top: calcSize(3);
+    --animate-margin: #{calcSize(3)};
   }
 
   & ~ .sd-page__row.sd-row--compact {
     margin-top: var(--sd-base-vertical-padding);
+    --animate-margin: var(--sd-base-vertical-padding);
   }
 }
 
 .sd-row.sd-page__row:not(.sd-row--compact) {
   & ~ .sd-row.sd-page__row:not(.sd-row--compact) {
     margin-top: calcSize(2);
+    --animate-margin: #{calcSize(2)};
   }
 }
 
@@ -43,6 +50,7 @@
 
   & > div {
     box-sizing: border-box;
+    --animation-padding-left: calcSize(2);
     padding-left: calcSize(2);
     display: flex;
     align-items: stretch;
@@ -54,6 +62,7 @@
     row-gap: var(--sd-base-vertical-padding);
 
     & > div {
+      --animation-padding-left: var(--sd-base-padding);
       padding-left: var(--sd-base-padding);
     }
   }
@@ -61,6 +70,7 @@
 
 .sd-row--multiple.sd-row--compact {
   & > div {
+    --animation-padding-left: var(--sd-base-padding);
     padding-left: var(--sd-base-padding);
   }
 }
@@ -86,4 +96,42 @@
   box-sizing: border-box;
   width: 100%;
   white-space: nowrap;
+}
+
+@keyframes marginFadeIn {
+  from {
+    margin-top: 0;
+  }
+
+  to {
+    margin-top: var(--animate-margin);
+  }
+}
+
+.sd-row--fade-in {
+  animation-fill-mode: forwards;
+  animation-name: fadeIn, moveIn, marginFadeIn;
+  min-height: 0 !important;
+  opacity: 0;
+  animation-timing-function: $ease-out;
+  animation-delay: $row-fade-in-delay, 0s, 0s;
+  animation-duration: $row-fade-in-duration, $row-move-in-duration, $row-move-in-duration;
+}
+
+.sd-row--fade-out {
+  animation-name: fadeIn, moveIn, marginFadeIn;
+  animation-timing-function: $reverse-ease-out;
+  animation-fill-mode: forwards;
+  animation-direction: reverse;
+  min-height: 0 !important;
+  animation-delay: 0s, $row-move-out-delay, $row-move-out-delay;
+  animation-duration: $row-fade-out-duration, $row-move-out-duration, $row-move-out-duration;
+}
+
+.sd-row--fade-in .sd-element-wrapper--fade-in {
+  animation: none;
+}
+
+.sd-row--fade-out .sd-element-wrapper--fade-out {
+  animation: none;
 }
