--- a/packages/survey-angular-ui/src/element.component.html
+++ b/packages/survey-angular-ui/src/element.component.html
@@ -1,5 +1,5 @@
 <ng-template #template>
-    <div *ngIf="!!model" [class]="model.cssClasses.questionWrapper" [style]="rootStyle" (focusin)="model.focusIn()">
+    <div *ngIf="!!model" [class]="model.cssClasses.questionWrapper" [style]="rootStyle" (focusin)="model.focusIn()" #container>
         <ng-template [component]="{ name: componentName, data: componentData }"></ng-template>
     </div>
 </ng-template>
