--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -79,7 +79,7 @@
   white-space: nowrap;
   flex-shrink: 0;
 
-  &+span {
+  & + span {
     float: left;
     width: 0;
   }
@@ -115,6 +115,7 @@
   position: absolute;
   left: calcSize(-3);
   top: calcSize(0.5);
+  transition-property: transform;
 }
 
 .sd-element__title--expandable.sd-element__title--expanded:before {
@@ -139,4 +140,137 @@
   border-radius: $panel-corner-radius;
   box-shadow: none;
   background-color: transparent;
+}
+
+@keyframes elementMoveIn {
+  from {
+    flex-basis: 0;
+    flex-grow: 0;
+    max-width: 0;
+    min-width: 0;
+    width: 0;
+    height: 0;
+    padding-left: 0;
+    overflow: hidden;
+  }
+
+  to {
+    height: var(--animation-height);
+    flex-basis: var(--animation-width);
+    width: var(--animation-width);
+    min-width: var(--animation-width);
+    padding-left: var(--animation-padding-left);
+    overflow: visible;
+  }
+}
+
+.sd-element-wrapper--fade-in {
+  animation-name: elementMoveIn, fadeIn;
+  animation-timing-function: $ease-out;
+  animation-fill-mode: forwards;
+  animation-duration: $element-move-in-duration, $element-fade-in-duration;
+  animation-delay: 0s, $element-fade-in-delay;
+  opacity: 0;
+}
+
+.sd-element-wrapper--fade-out {
+  animation-name: elementMoveIn, fadeIn;
+  animation-timing-function: $reverse-ease-out;
+  animation-fill-mode: forwards;
+  animation-direction: reverse;
+  animation-duration: $element-move-out-duration, $element-fade-out-duration;
+  animation-delay: $element-move-out-delay, 0s;
+}
+
+@keyframes paddingFadeIn {
+  from {
+    padding-top: 0;
+  }
+
+  to {
+    padding-top: var(--animation-padding-top);
+  }
+}
+
+.sd-element__content {
+  box-sizing: border-box;
+}
+
+.sd-element__content--fade-in {
+  animation-name: fadeIn, moveIn, paddingFadeIn;
+  min-height: 0 !important;
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-timing-function: $ease-out;
+  animation-duration: $expand-fade-in-duration, $expand-move-in-duration, $expand-move-in-duration;
+  animation-delay: $expand-fade-in-delay, 0s, 0s;
+}
+
+.sd-element__content--fade-out {
+  animation-name: fadeIn, moveIn, paddingFadeIn;
+  min-height: 0 !important;
+  animation-direction: reverse;
+  animation-fill-mode: forwards;
+  animation-timing-function: $reverse-ease-out;
+  animation-duration: $collapse-fade-out-duration, $collapse-move-out-duration, $collapse-move-out-duration;
+  animation-delay: 0s, $collapse-move-out-delay, $collapse-move-out-delay;
+}
+
+.sd-element--expandable.sd-elemenet--expandable--animating {
+  & > .sd-element__header:focus-within,
+  & > .sd-element__header:hover {
+    background-color: transparent;
+  }
+}
+
+.sd-elemenet--expandable--animating.sd-element--expandable {
+  transition-property: padding-top, padding-bottom;
+
+  & > .sd-element__header {
+    transition-property: padding-top, padding-bottom;
+  }
+
+  &.sd-element--expanded {
+    transition-timing-function: $ease-out;
+    transition-duration: $expand-move-in-duration;
+
+    & > .sd-element__header {
+      transition-timing-function: $ease-out;
+      transition-duration: $expand-move-in-duration;
+
+      .sd-element__title:before {
+        transition-duration: $expand-move-in-duration;
+      }
+    }
+  }
+
+  &.sd-element--collapsed {
+    transition-timing-function: $ease-out;
+    transition-duration: $collapse-move-out-duration;
+    transition-delay: $collapse-move-out-delay;
+
+    & > .sd-element__header {
+      transition-timing-function: $ease-out;
+      transition-duration: $collapse-move-out-duration;
+      transition-delay: $collapse-move-out-delay;
+
+      .sd-element__title:before {
+        transition-duration: $collapse-move-out-duration;
+        transition-delay: $collapse-move-out-delay;
+      }
+    }
+  }
+
+  &.sd-element--complex {
+    & > .sd-element__header--location-top:after {
+      display: block;
+      animation-name: fadeIn;
+      animation-fill-mode: forwards;
+      animation-duration: $transition-duration;
+    }
+
+    &.sd-element--collapsed .sd-element__header--location-top:after {
+      animation-direction: reverse;
+    }
+  }
 }
