--- a/src/knockout/templates/rows.html
+++ b/src/knockout/templates/rows.html
@@ -1,8 +1,6 @@
 <script type="text/html" id="survey-rows">
-  <!-- ko foreach: { data: rows, as: 'row'} -->
-    <!-- ko if: row.visible -->
+  <!-- ko foreach: { data: visibleRows, as: 'row' } -->
       <!-- ko component: { name: $parent.survey.getRowWrapperComponentName(row), params: { componentData:  $parent.survey.getRowWrapperComponentData(row), templateData: { name: 'survey-row', data: row } } } -->
       <!-- /ko -->
-    <!-- /ko -->
   <!-- /ko -->
 </script>
