--- a/packages/survey-angular-ui/src/panel.component.html
+++ b/packages/survey-angular-ui/src/panel.component.html
@@ -4,7 +4,7 @@
     <div *ngIf="model.hasDescription || model.hasTitle" [element]="model" sv-ng-element-header></div>
     <div *ngIf="!model.showErrorsAbovePanel && model.hasVisibleErrors" [element]="model" sv-ng-errors></div>
     <div *ngIf="model.renderedIsExpanded" [style.paddingLeft]="model.innerPaddingLeft" [class]="model.cssClasses.panel.content" [attr.id]="model.contentId">
-      <ng-container *ngFor="let row of model.rows; trackBy: trackRowBy">
+      <ng-container *ngFor="let row of model.visibleRows; trackBy: trackRowBy">
         <ng-template [component]="{ name: $any(model.survey).getRowWrapperComponentName(row), data: { componentData: $any(model.survey).getRowWrapperComponentData(row) } }">
           <sv-ng-row [row]="row"></sv-ng-row>
         </ng-template>
