Implemented #8043 - Support swapOrder option for radio render mode of the boolean question

--- a/packages/survey-angular-ui/src/components/renderAs/boolean-radio/boolean-radio.component.html
+++ b/packages/survey-angular-ui/src/components/renderAs/boolean-radio/boolean-radio.component.html
@@ -1,6 +1,7 @@
 <div [class]="model.cssClasses.rootRadio">
   <fieldset role="presentation" [class]="model.cssClasses.radioFieldset">
+    <sv-ng-boolean-radio-item *ngIf="model.swapOrder" [value]="true" [locText]="model.locLabelTrue" [question]="model" ></sv-ng-boolean-radio-item>
     <sv-ng-boolean-radio-item  [value]="false" [locText]="model.locLabelFalse" [question]="model" ></sv-ng-boolean-radio-item>
-    <sv-ng-boolean-radio-item  [value]="true" [locText]="model.locLabelTrue" [question]="model" ></sv-ng-boolean-radio-item>
+    <sv-ng-boolean-radio-item *ngIf="!model.swapOrder" [value]="true" [locText]="model.locLabelTrue" [question]="model" ></sv-ng-boolean-radio-item>
   </fieldset>
 </div>
