--- a/src/defaultV2-theme/blocks/sd-imagepicker.scss
+++ b/src/defaultV2-theme/blocks/sd-imagepicker.scss
@@ -150,6 +150,7 @@
     /* Safari 6.0 - 9.0 */
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
+    opacity: 0.25;
   }
 
   &.sd-imagepicker__item--checked {
@@ -157,6 +158,7 @@
       /* Safari 6.0 - 9.0 */
       -webkit-filter: grayscale(0%);
       filter: grayscale(0%);
+      opacity: 1;
     }
   }
 }
