--- a/src/defaultV2-theme/blocks/sd-ranking.scss
+++ b/src/defaultV2-theme/blocks/sd-ranking.scss
@@ -7,6 +7,10 @@
 .sd-element--with-frame .sv-ranking-item {
   left: calcSize(-3);
 }
+.sv-ranking.sd-ranking--readonly {
+  user-select: initial;
+  -webkit-user-select: initial;
+}
 
 @container (max-width: #{$sd-panel-normal-min-width}) {
   .sv-ranking--select-to-rank-horizontal {
