#6779 - matrix alt-rows

--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -280,7 +280,7 @@
 .sd-file--single-image {
   height: calc(36 * #{$base-unit});
 
-  .sd-file__preview {
+  .sd-file__preview-item {
     width: 100%;
     margin: 0;
   }
