--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -139,13 +139,22 @@
           &.sd-item--checked .sd-item__decorator {
             background-color: $primary;
           }
+          &.sd-item--readonly.sd-item--checked .sd-item__decorator {
+            background-color: $primary-foreground;
+          }
+          &.sd-item--preview.sd-item--preview .sd-item__decorator {
+            background-color: transparent;
+          }
 
           &.sd-radio--checked .sd-radio__control:focus+.sd-radio__decorator:after {
             background-color: $primary-foreground;
           }
         }
       }
+
     }
+
+
   }
 }
 
