--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -110,22 +110,22 @@
 
 .sd-row--fade-in {
   animation-fill-mode: forwards;
-  animation-name: fadeIn, moveIn, marginFadeIn;
+  animation-name: fadeIn, moveIn, marginFadeIn, overflowIn;
   min-height: 0 !important;
   opacity: 0;
   animation-timing-function: $ease-out;
-  animation-delay: $row-fade-in-delay, 0s, 0s;
-  animation-duration: $row-fade-in-duration, $row-move-in-duration, $row-move-in-duration;
+  animation-delay: $row-fade-in-delay, 0s, 0s, 0s;
+  animation-duration: $row-fade-in-duration, $row-move-in-duration, $row-move-in-duration, $row-move-in-duration;
 }
 
 .sd-row--fade-out {
-  animation-name: fadeIn, moveIn, marginFadeIn;
+  animation-name: fadeIn, moveIn, marginFadeIn, overflowIn;
   animation-timing-function: $reverse-ease-out;
   animation-fill-mode: forwards;
   animation-direction: reverse;
   min-height: 0 !important;
-  animation-delay: 0s, $row-move-out-delay, $row-move-out-delay;
-  animation-duration: $row-fade-out-duration, $row-move-out-duration, $row-move-out-duration;
+  animation-delay: 0s, $row-move-out-delay, $row-move-out-delay, $row-move-out-delay;
+  animation-duration: $row-fade-out-duration, $row-move-out-duration, $row-move-out-duration, $row-move-out-duration;
 }
 
 .sd-row--fade-in .sd-element-wrapper--fade-in {
