--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -422,6 +422,10 @@
   .sd-file__decorator {
     border-color: transparent;
   }
+
+  .sd-file__actions-container {
+    display: none;
+  }
 }
 
 .sd-file--preview {
@@ -435,5 +439,13 @@
 
   .sd-file__image-wrapper {
     background: transparent;
+  }
+
+  .sd-file__actions-container {
+    display: none;
+  }
+
+  .sd-file__drag-area-placeholder {
+    color: $foreground;
   }
 }
