#6776 - siganture, dynamic panel

--- a/src/defaultV2-theme/blocks/sd-paneldynamic.scss
+++ b/src/defaultV2-theme/blocks/sd-paneldynamic.scss
@@ -28,6 +28,12 @@
     }
 }
 
+.sd-question--readonly,
+.sd-question--preview {
+    .sd-paneldynamic .sd-question__placeholder {
+        color: $foreground;
+    }
+}
 .sd-paneldynamic__separator {
     display: block;
     position: absolute;
