--- a/src/defaultV2-theme/blocks/sd-signaturepad.scss
+++ b/src/defaultV2-theme/blocks/sd-signaturepad.scss
@@ -9,6 +9,16 @@
     border: 1px dashed $border;
 }
 
+.sd-question--readonly,
+.sd-question--preview {
+    .sjs_sp_container {
+        border: none;
+    }
+
+    .sjs_sp_placeholder {
+        color: $foreground;
+    }
+}
 .sjs_sp_controls.sd-signaturepad__controls {
     right: calcSize(1);
     top: calcSize(1);
