--- a/src/defaultV2-theme/blocks/sd-panel.scss
+++ b/src/defaultV2-theme/blocks/sd-panel.scss
@@ -83,6 +83,7 @@
 .sd-panel.sd-element--nested {
   & > .sd-panel__content {
     padding-bottom: var(--sd-base-padding);
+    --animation-padding-top: var(--sd-base-padding);
   }
 }
 
