--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -185,9 +185,11 @@
 @keyframes paddingFadeIn {
   from {
     padding-top: 0;
+    padding-bottom: 0;
   }
 
   to {
+    padding-bottom: var(--animation-padding-bottom);
     padding-top: var(--animation-padding-top);
   }
 }
@@ -195,25 +197,32 @@
 .sd-element__content {
   box-sizing: border-box;
 }
+.sd-element__content--fade-in,
+.sd-element__content--fade-out {
+  --animation-padding-top: 0;
+  --animation-padding-bottom: 0;
+}
 
 .sd-element__content--fade-in {
-  animation-name: fadeIn, moveIn, paddingFadeIn;
+  animation-name: fadeIn, moveIn, paddingFadeIn, overflowIn;
   min-height: 0 !important;
   opacity: 0;
   animation-fill-mode: forwards;
   animation-timing-function: $ease-out;
-  animation-duration: $expand-fade-in-duration, $expand-move-in-duration, $expand-move-in-duration;
-  animation-delay: $expand-fade-in-delay, 0s, 0s;
+  animation-duration: $expand-fade-in-duration, $expand-move-in-duration, $expand-move-in-duration,
+    $expand-move-in-duration;
+  animation-delay: $expand-fade-in-delay, 0s, 0s, 0s;
 }
 
 .sd-element__content--fade-out {
-  animation-name: fadeIn, moveIn, paddingFadeIn;
+  animation-name: fadeIn, moveIn, paddingFadeIn, overflowIn;
   min-height: 0 !important;
   animation-direction: reverse;
   animation-fill-mode: forwards;
   animation-timing-function: $reverse-ease-out;
-  animation-duration: $collapse-fade-out-duration, $collapse-move-out-duration, $collapse-move-out-duration;
-  animation-delay: 0s, $collapse-move-out-delay, $collapse-move-out-delay;
+  animation-duration: $collapse-fade-out-duration, $collapse-move-out-duration, $collapse-move-out-duration,
+    $expand-move-in-duration;
+  animation-delay: 0s, $collapse-move-out-delay, $collapse-move-out-delay, $collapse-move-out-delay;
 }
 
 .sd-element--expandable.sd-elemenet--expandable--animating {
