--- a/src/defaultV2-theme/blocks/sd-boolean.scss
+++ b/src/defaultV2-theme/blocks/sd-boolean.scss
@@ -121,6 +121,7 @@
   box-shadow: none;
   transition: none;
   background: transparent;
+  padding-left: 0;
 
   .sd-boolean__thumb {
     border: 1px solid $foreground;
@@ -130,14 +131,21 @@
   }
 
   &.sd-boolean--checked {
-    .sd-boolean__thumb {
-        margin-left: auto;
+    padding-left: 0;
+
+    .sd-boolean__switch {
+      padding-left: 0;
     }
+
+    .sd-boolean__thumb {
+      margin-left: auto;
+    }
+
     .sd-boolean__label--false {
       padding-left: 0;
     }
   }
-  
+
   .sd-checkbox__label--preview {
     color: $foreground;
   }
