--- a/src/knockout/templates/question-signaturepad.html
+++ b/src/knockout/templates/question-signaturepad.html
@@ -1,7 +1,7 @@
 <script type="text/html" id="survey-question-signaturepad">
     <div data-bind="css: question.cssClasses.root, style: { width: question.renderedCanvasWidth }">
         <div data-bind="css: question.cssClasses.placeholder, visible: $data.needShowPlaceholder()">
-            <!-- ko template: { name: 'survey-string', data: question.locPlaceholder } -->
+            <!-- ko template: { name: 'survey-string', data: question.locRenderedPlaceholder } -->
             <!-- /ko -->
         </div>
         <div>
