--- a/src/knockout/templates/index.html
+++ b/src/knockout/templates/index.html
@@ -44,7 +44,7 @@
               <!-- /ko -->
               <!-- ko component: { name: "sv-components-container", params: { survey: $data, container: "footer", needRenderWrapper: false } } --><!-- /ko -->
               <!-- ko if: state == "completed" && showCompletedPage -->
-              <div data-bind="html: processedCompletedHtml, css: completedCss"></div>
+              <div data-bind="html: koProcessedCompletedHtml, css: completedCss"></div>
               <!-- ko component: { name: "sv-components-container", params: { survey: $data, container: "completePage", needRenderWrapper: false } } --><!-- /ko -->
               <!-- /ko -->
               <!-- ko if: state == "completedbefore" -->
