Fixed #8101 - Image picker - long captures make corresponding image overlap with the neighboring one

--- a/src/defaultV2-theme/blocks/sd-imagepicker.scss
+++ b/src/defaultV2-theme/blocks/sd-imagepicker.scss
@@ -129,6 +129,18 @@
   gap: calcSize(2);
   align-items: flex-start;
   padding-right: 0;
+
+  .sd-imagepicker__item {
+    width: 100%;
+  }
+
+  .sd-imagepicker__text {
+    width: 100%;
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
+  }
 }
 
 .sd-selectbase__column.sd-imagepicker__column:not(:last-child) {
