--- a/src/knockout/templates/question-paneldynamic.html
+++ b/src/knockout/templates/question-paneldynamic.html
@@ -10,7 +10,7 @@
         </div>
     <!-- /ko -->
     <!-- ko if: question.koIsList() -->
-      <!-- ko foreach: { data: question.panels } -->
+      <!-- ko foreach: { data: question.visiblePanels } -->
         <div data-bind="css: question.getPanelWrapperCss($data)">
           <!-- ko let: { question: $data } -->
             <!-- ko component: { name: survey.getElementWrapperComponentName(question), params: { componentData:  survey.getElementWrapperComponentData(question), templateData: { name: question.koElementType, data: question, afterRender: $parent.koPanelAfterRender } } } -->
